@startuml
class CustomInputField {
    + CustomInputField()
    + SetBorderSettings(width:float, radious:float) : void
    + SetMarginSettings(margin:float) : void
    + SetPaddingSettings(padding:float) : void
    + OnInjectValidator(validator:DelegateValidator) : void
    + Validate(flag:bool, newvalue:int) : void
    + Text : string <<get>> <<set>>
}
class UxmlFactory {
}
class UxmlTraits {
    + <<override>> Init(ve:VisualElement, bag:IUxmlAttributes, cc:CreationContext) : void
}
class "UxmlFactory`2"<T1,T2> {
}
VisualElement <|-- CustomInputField
CustomInputField --> "TextField" TextField
"UxmlFactory`2" "<CustomInputField,UxmlTraits>" <|-- UxmlFactory
UxmlTraits o-> "_description" UxmlStringAttributeDescription
UxmlTraits o-> "_border" UxmlFloatAttributeDescription
UxmlTraits o-> "_radious" UxmlFloatAttributeDescription
UxmlTraits o-> "_margin" UxmlFloatAttributeDescription
UxmlTraits o-> "_padding" UxmlFloatAttributeDescription
UxmlTraits o-> "_colorBackground" UxmlColorAttributeDescription
UxmlTraits o-> "_colorBorder" UxmlColorAttributeDescription
UxmlTraits o-> "_fontSize" UxmlIntAttributeDescription
@enduml
